@@ -41,6 +41,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             <release>21</release>
           </configuration>
         </plugin>
+	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.3.1</version>
+          <configuration>
+            <argLine>--enable-preview --enable-native-access ALL-UNNAMED</argLine>
+          </configuration>
+	</plugin>
       </plugins>
     </pluginManagement>
   </build>
